# devtogo

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: main.yml
src/: error.rs  main.rs  new.rs  push.rs  sync.rs
tests/data/: bar.md  foo.md
