[package]
name = "devtogo"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1"
anyhow = "1.0"
chrono = "0.4"
colored = "1.9"
dialoguer = "0.6"
frontmatter = "0.4"
reqwest = { version = "0.10", default_features= false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
walkdir = "2.3"
