[package]
name = "devtogo"
version = "0.0.1"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "a dev.to tool for the road"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/devtogo"
homepage = "https://github.com/softprops/devtogo"
repository = "https://github.com/softprops/devtogo"
categories = ["command-line-utilities"]
keywords = ["dev.to", "dev", "blog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = true
# https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
codegen-units = 1
# https://doc.rust-lang.org/cargo/reference/profiles.html#panic
panic = "abort"

[dependencies]
again = "0.1"
anyhow = "1.0"
chrono = "0.4"
colored = "1.9"
frontmatter = "0.4"
reqwest = { version = "0.10", default_features= false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
walkdir = "2.3"
